--- a/.spec-driver/registry/revisions.yaml
+++ b/.spec-driver/registry/revisions.yaml
@@ -61,3 +61,14 @@ revisions:
     - type: documents
       target: DE-009
       attributes: {}
+  RE-007:
+    kind: revision
+    status: completed
+    name: Spec Revision - Delta DE-010 completion
+    slug: delta-de-010-completion
+    updated: '2025-11-04'
+    path: change/revisions/RE-007-delta-de-010-completion/RE-007.md
+    relations:
+    - type: documents
+      target: DE-010
+      attributes: {}
