--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
 name = "spec-driver"
-version = "0.3.0"
+version = "0.4.0"
 description = "Specification-driven development toolkit with multi-language spec sync and documentation generation"
 authors = [
-    { name = "David Lee", email = "david@supekku.dev" }
+    { name = "David Lee", email = "david@davlee.com" }
 ]
 readme = "README.md"
 license = { text = "MIT" }
@@ -13,7 +13,6 @@ dependencies = [
     "pyyaml>=6.0.3",
     "python-frontmatter>=1.1.0",
     "typer>=0.15.0",
-    "pylint-per-file-ignores>=3.1.0",
 ]
 keywords = ["specification", "documentation", "adr", "architecture-decision-records", "spec-sync"]
 classifiers = [
@@ -84,6 +83,7 @@ dev = [
     "pytest>=8.4.2",
     "ruff>=0.14.0",
     "pylint>=4.0.2",
+    "pylint-per-file-ignores>=3.1.0",
 ]
 
 [tool.pytest.ini_options]
