--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "spec-driver"
-version = "0.4.1"
+version = "0.4.2"
 description = "Specification-driven development toolkit with multi-language spec sync and documentation generation"
 authors = [
     { name = "David Lee", email = "dav@davlee.com" }
@@ -33,7 +33,7 @@ classifiers = [
 Homepage = "https://github.com/davidlee/spec-driver"
 Repository = "https://github.com/davidlee/spec-driver"
 Issues = "https://github.com/davidlee/spec-driver/issues"
-Website = "https//supekku.dev"
+Website = "https//supekku.dev/"
 
 
 [project.scripts]
